fixed alignment

--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -4,7 +4,7 @@
 .bottom_three > div > p {
     text-align: left; 
 }
-.bottom_three > div > h4 {
+.education > h4 {
     text-align: left;
 }
 .skills {
